--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,6 @@
 <h1>Pages#index</h1>
 <p>Find me in app/views/pages/index.html.erb</p>
 
-<<<<<<< HEAD
-janice
-=======
+
 <h1>Andrew Southard</h1>
->>>>>>> 210d89c69006eacacca4b17f4d987cd4feb4bc18
+<h1>Janice Wong</h1>
