--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,9 +2,9 @@
 <p>Find me in app/views/pages/index.html.erb</p>
 <h1>Imani Fecu!!!!</h1>
 
-Josh
+<h1>Josh</h1>
 
-janice
+<h1>janice</h1>
 
 <h1>Andrew Southard</h1>
 
