--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,20 +1,2 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
-<h1>Imani Fecu!!!!</h1>
-
-Josh
-
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<h1>JaMiE<h1>
-=======
-janice
->>>>>>> 2e7a7eed42524ff51a2093effdaa5b95f31900d3
-=======
-=======
-janice
-
->>>>>>> 99fabcd4edfa938a228a21ba40f1c5558ed4a565
-<h1>Andrew Southard</h1>
+<h1>HAHAHHAHAHAHAHHAHAHAHAHA</h1>
 
