--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 
 <h1>Pages#index</h1>
-
+<h1>Brian</h1>
 <p>Find <b>****Jon Eaves****</b> in app/views/pages/index.html.erb</p>
 
 <p>Find me in app/views/pages/index.html.erb</p>
